--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -9,7 +9,7 @@
     <div>This is the list of all books.</div>
     <ul>
     <% for(book of books) { %>
-        <li><%= book.title %></li>
+        <li><a href="/books/<%= book._id%>"><%= book.title%></a></li>
     <% } %>
     </ul>    
 </body>
